--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,6 @@ async-std = "1.0"
 quickcheck = "0.9.0"
 
 [build-dependencies]
-#prost-build = "0.6"
+prost-build = "0.6"
 protoc-grpcio = "1.2.0"
 
