--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ prost = "0.6.1"
 grpcio = { version = "0.5", default-features = false, features = ["protobuf-codec"] }
 protobuf = "2.14"
 futures = "0.3.5"
+sha2 = "0.8.0"
+hmac = "0.7.0"
 
 [dev-dependencies]
 async-std = "1.0"
@@ -35,4 +37,8 @@ quickcheck = "0.9.0"
 [build-dependencies]
 prost-build = "0.6"
 protoc-grpcio = "1.2.0"
+
+[features]
+default = ["secp256k1"]
+secp256k1 = ["libsecp256k1"]
 
