--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ protobuf = "2.14"
 futures = "0.3.5"
 sha2 = "0.8.0"
 hmac = "0.7.0"
+aes-ctr = "0.3"
+aesni = { version = "0.6", features = ["nocheck"], optional = true }
+ctr = "0.3"
+twofish = "0.2.0"
 
 [dev-dependencies]
 async-std = "1.0"
