--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ aes-ctr = "0.3"
 aesni = { version = "0.6", features = ["nocheck"], optional = true }
 ctr = "0.3"
 twofish = "0.2.0"
+futures-util = "0.3.5"
 
 [dev-dependencies]
 async-std = "1.0"
